--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
             	        <ul class="nav pull-right">
 				{% if user.is_authenticated %}
 					<li><a href="{% url 'user_page' user=user %}">{{ user.username }}</a></li>
-					<li><a name="logout_nav" href="{% url 'auth_logout' %}">Logout</a></li>
+					<li><a name="logout_nav" href="{% url 'auth_logout' %}?next={{request.path}}">Logout</a></li>
 				{% else %}
 					<li class="pull-right"><a name="login_nav" href="{% url 'login' %}?next={{request.path}}">Login</a></li>
 				{% endif %}
