--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -12,7 +12,7 @@
 		}); 
         </script> 
 
-	<form action="/accounts/register/" method="POST">
+	<form action="{% url 'register' %}" method="POST">
 		{% csrf_token %}
 		{% if form.errors %}
 			<div class="alert alert-error">
