--- a/templates/post_page.html
+++ b/templates/post_page.html
@@ -20,7 +20,7 @@
 					drawPulseOutline(draw);
 					{% for user_type_key in user_color_dict %}
 						draw.fillStyle = "{{ user_color_dict|get_item:user_type_key }}";
-						drawPulse({{ post_only_dict|key:user_type_key}}, separationDist*({{ forloop.counter }}-1), draw);
+						drawPulse({{ post.votes_by_user_type|key:user_type_key|key:2}}, separationDist*({{ forloop.counter }}-1), draw);
 					{% endfor %}
 					drawMiddle({{ post.vote_percentage }}, draw);
 				});
@@ -140,7 +140,7 @@
 						drawPulseOutline(draw);
 						{% for user_type_key in user_color_dict %}
 							draw.fillStyle = "{{ user_color_dict|get_item:user_type_key }}";
-							drawPulse({{ vote_dict|key:c|key:user_type_key}}, separationDist*({{ forloop.counter }}-1), draw);
+							drawPulse({{ c.votes_by_user_type|key:user_type_key|key:2 }}, separationDist*({{ forloop.counter }}-1), draw);
 						{% endfor %}
 						drawMiddle({{ c.vote_percentage }}, draw);
 					});
